backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mockmarket-service
  namespace: mockmarket
  annotations:
    cloud.google.com/backend-config: '{"default": "mockmarket-backend-config"}'
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 5001
      protocol: TCP
      name: https
  selector:
    app: mockmarket
