backend/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: mockmarket-service
  namespace: mockmarket
spec:
  type: NodePort
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
  selector:
    app: mockmarket
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mockmarket-ingress
  namespace: mockmarket
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "mockmarket-ip"
    networking.gke.io/managed-certificates: mockmarket-cert
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: "130-211-35-181.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mockmarket-service
                port:
                  number: 5001
